fixed responsive alignment of items in footer

--- a/css/body.css
+++ b/css/body.css
@@ -78,8 +78,10 @@
 
 #credential {
     display: flex;
+    flex: 1;
     flex-direction: column;
     align-items: center;
+    align-content: center;
     padding: 10px;
 }
 
